tests/Fase2-Semantic/error/t22-declaring_a_not_void_type_main_method.ctds
class main {
	integer x;
	

	integer add( integer b){
		x = x+b;
		return x;
	}

	integer main(){
		x=0;
		add(2);
	}
	
}
